--- a/css/config.css
+++ b/css/config.css
@@ -17,7 +17,7 @@ body {
 
 .content {
   margin: auto;
-  width: 360px;
+  width: 100%;
+  min-width: 360px;
   min-height: 800px;
-  border: 1px solid black;
 }
