feat:지역 하나만 선택

--- a/css/select.css
+++ b/css/select.css
@@ -44,12 +44,12 @@ body {
     max-width: 500px; 
 }
 
-#countryBox button:hover,
+/* #countryBox button:hover,
 #categoryBox button:hover
 {
     background-color:#FDE047 ;
     font-weight: bold;
-}
+} */
 
 #countryBox div {
     flex-basis: 50%;
