--- a/css/config.css
+++ b/css/config.css
@@ -13,11 +13,13 @@ html {
 
 body {
   display: flex;
+
+  width: 360px;
+  min-height: 800px;
 }
 
 .content {
   margin: auto;
   width: 360px;
-  min-width: 360px;
   min-height: 800px;
 }
