--- a/css/select.css
+++ b/css/select.css
@@ -22,21 +22,7 @@ body {
     border: 1px solid black;
 }
 
-#countryBox button{
-    display: inline-flex;
-    align-items: center;
-    flex-shrink: 0;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: #F4f4f5;
-    width:148px;
-    height: 40px;
-    padding-left: 12px;
-    font-weight: 400;
-    margin-bottom: 5px;
-    margin-left: 13px;
-    flex-basis: 50%;
-}
+
 #countryBox {
     display: flex;
     flex-wrap: wrap;
@@ -44,34 +30,18 @@ body {
     max-width: 500px; 
 }
 
-/* #countryBox button:hover,
+#countryBox button:hover,
 #categoryBox button:hover
 {
     background-color:#FDE047 ;
     font-weight: bold;
-} */
+}
 
 #countryBox div {
     flex-basis: 50%;
     margin-bottom: 5px; 
 }
 
-#categoryBox button{
-    display: inline-flex;
-    align-items: center;
-    flex-shrink: 0;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: #F4f4f5;
-    width:148px;
-    height: 40px;
-    padding-left: 12px;
-    font-weight: 400;
-    margin-bottom: 5px;
-    margin-left: 13px;
-    flex-basis: 50%;
-    
-}
 #categoryBox {
     display: flex;
     flex-wrap: wrap;
@@ -84,4 +54,37 @@ body {
     margin-bottom: 5px; 
 }
 
+.region_btn,
+.category_btn{
+    background-color: #F4f4f5;
+    font-weight: 400;
+
+    display: inline-flex;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 4px;
+    font-size: 16px;
+    width:148px;
+    height: 40px;
+    padding-left: 12px;
+    margin-bottom: 5px;
+    margin-left: 13px;
+    flex-basis: 50%;
+}
+
+.active {
+    background-color:#FDE047;
+    font-weight: 700;
+    display: inline-flex;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 4px;
+    font-size: 16px;
+    width:148px;
+    height: 40px;
+    padding-left: 12px;
+    margin-bottom: 5px;
+    margin-left: 13px;
+    flex-basis: 50%;
+}
 
