--- a/css/config.css
+++ b/css/config.css
@@ -1,10 +1,15 @@
 @font-face {
   font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.7/dist/web/static/pretendard.css");
+  src: url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.7/dist/web/static/pretendard.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.7/dist/web/static/pretendard.woff")
+      format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 * {
-  font-family: "Pretendard";
+  font-family: "Pretendard", sans-serif;
 }
 
 html {
@@ -18,6 +23,4 @@ body {
 
 .content {
   margin: auto;
-  width: 360px;
-  min-height: 800px;
 }
