--- a/css/config.css
+++ b/css/config.css
@@ -1,10 +1,13 @@
 @font-face {
   font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.7/dist/web/static/pretendard.css");
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
 }
 
 * {
-  font-family: "Pretendard";
+  font-family: "Pretendard", sans-serif;
 }
 
 html {
@@ -18,6 +21,4 @@ body {
 
 .content {
   margin: auto;
-  width: 360px;
-  min-height: 800px;
 }
