--- a/css/select.css
+++ b/css/select.css
@@ -1,4 +1,17 @@
+html {
+    background-color: white;
+}
 
+body {
+    display: flex;
+}
+
+.content {
+    margin: auto;
+    width: 360px;
+    min-height: 800px;
+    border: 1px solid black;
+}
 #countryBox {
     display: flex;
     flex-wrap: wrap;
