--- a/css/config.css
+++ b/css/config.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.7/dist/web/static/pretendard.woff2")
       format("woff2"),
@@ -10,7 +10,7 @@
 
 * {
   font-family: "Pretendard", sans-serif;
-}
+} */
 
 html {
   background-color: white;
